--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Healet</title>
+  <title>Healet</title>slider-bg
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -64,7 +64,7 @@
   <!-- slider section -->
   <section class="slider_section position-relative">
     <div class="slider_bg_box">
-      <img src="images/slider-bg.jpg" alt="">
+      <img src="images/2560x1600-jam-2.jpg" alt="">
     </div>
     <div class="slider_bg"></div>
     <div class="container">
@@ -91,7 +91,7 @@
 
   <!-- shop section -->
 
-  <section class="shop_section layout_padding">
+  <section class="shop_section layout_padding" style="display: none;">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -312,7 +312,7 @@
 
   <!-- about section -->
 
-  <section class="about_section  ">
+  <section class="about_section  " style="display: none;">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -343,7 +343,7 @@
 
   <!-- offer section -->
 
-  <section class="offer_section layout_padding">
+  <section class="offer_section layout_padding " style="display: none;">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-7 px-0">
@@ -391,7 +391,7 @@
 
   <!-- blog section -->
 
-  <section class="blog_section ">
+  <section class="blog_section " style="display: none;">
     <div class="container">
       <div class="heading_container">
         <h2>
