--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Healet</title>slider-bg
+  <title>Our DnD Games</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -34,12 +34,10 @@
       <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand" href="index.html">
           <span>
-            Healet
+            DND
           </span>
         </a>
-        <div class="" id="">
-
-          <div class="custom_menu-btn">
+          <div class="custom_menu-btn" style="display: none;">
             <button onclick="openNav()">
               <span class="s-1"> </span>
               <span class="s-2"> </span>
@@ -48,9 +46,9 @@
             <div id="myNav" class="overlay">
               <div class="overlay-content">
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="shop.html">Shop</a>
-                <a href="blog.html">Blog</a>
+                <a href="about.html" style="display: none;">About</a>
+                <a href="shop.html" style="display: none;">Shop</a>
+                <a href="blog.html" style="display: none;">Blog</a>
               </div>
             </div>
           </div>
@@ -64,25 +62,19 @@
   <!-- slider section -->
   <section class="slider_section position-relative">
     <div class="slider_bg_box">
-      <img src="images/2560x1600-jam-2.jpg" alt="">
+      <img src="images/page1.jpg" alt="">
     </div>
     <div class="slider_bg"></div>
     <div class="container">
       <div class="col-md-9 col-lg-8">
         <div class="detail-box">
           <h1>
-            Best Jewellery
-            <br> Collection
+            Наши игоры в НРИ
           </h1>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem
+            Может быть я дополню это похзже
+            <br> Сервера и немного информации
           </p>
-          <div>
-            <a href="" class="slider-link">
-              Shop Now
-            </a>
-          </div>
         </div>
       </div>
     </div>
@@ -343,42 +335,39 @@
 
   <!-- offer section -->
 
-  <section class="offer_section layout_padding " style="display: none;">
+  <section class="offer_section layout_padding ">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-7 px-0">
-          <div class="box offer-box1">
-            <img src="images/o1.jpg" alt="">
+          <div class="box offer-box1" style="background-image: url(images/cat.jpg); background-size: cover; background-repeat: no-repeat; background-position: center">
             <div class="detail-box">
               <h2>
-                Upto 15% Off
+                Сервер основной
               </h2>
               <a href="">
-                Shop Now
+                Пора играть!
               </a>
             </div>
           </div>
         </div>
         <div class="col-md-5 px-0">
-          <div class="box offer-box2">
-            <img src="images/o2.jpg" alt="">
+          <div class="box offer-box2" style="background-image: url(images/cat2.jpg); background-size: cover; background-repeat: no-repeat; background-position: center" >
             <div class="detail-box">
               <h2>
-                Upto 10% Off
+                Сервер запасной
               </h2>
               <a href="">
-                Shop Now
+                Шо?! Опять!
               </a>
             </div>
           </div>
-          <div class="box offer-box3">
-            <img src="images/o3.jpg" alt="">
+          <div class="box offer-box3" style="background-image: url(images/cat2.jpg); background-size: cover; background-repeat: no-repeat; background-position: center">
             <div class="detail-box">
               <h2>
-                Upto 20% Off
+                Сервер тестовый
               </h2>
               <a href="">
-                Shop Now
+                Ох бл*ть.
               </a>
             </div>
           </div>
@@ -451,7 +440,7 @@
 
   <!-- client section -->
 
-  <section class="client_section layout_padding">
+  <section class="client_section layout_padding" style="display: none;">
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -550,7 +539,7 @@
   <!-- end client section -->
 
   <!-- info section -->
-  <section class="info_section layout_padding2">
+  <section class="info_section layout_padding2" style="display: none;">
     <div class="container">
       <div class="row info_form_social_row">
         <div class="col-md-8 col-lg-9">
