--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Our DnD Games</title>
+  <title>DND</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -34,7 +34,7 @@
       <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand" href="index.html">
           <span>
-            DND
+            Our DnD Games
           </span>
         </a>
           <div class="custom_menu-btn" style="display: none;">
@@ -61,8 +61,17 @@
 
   <!-- slider section -->
   <section class="slider_section position-relative">
-    <div class="slider_bg_box">
+    <div class="slider_bg_box fade">
       <img src="images/page1.jpg" alt="">
+    </div>
+    <div class="slider_bg_box fade">
+      <img src="images/page2.jpg" alt="">
+    </div>
+    <div class="slider_bg_box fade">
+      <img src="images/page3.avif" alt="">
+    </div>
+    <div class="slider_bg_box fade">
+      <img src="images/page4.jpg" alt="">
     </div>
     <div class="slider_bg"></div>
     <div class="container">
@@ -72,8 +81,8 @@
             Наши игоры в НРИ
           </h1>
           <p>
-            Может быть я дополню это похзже
-            <br> Сервера и немного информации
+            Сервера и немного информации
+            <br> Может быть я дополню это позже
           </p>
         </div>
       </div>
@@ -82,7 +91,7 @@
   <!-- end slider section -->
 
   <!-- shop section -->
-
+  <!--
   <section class="shop_section layout_padding" style="display: none;">
     <div class="container">
       <div class="heading_container heading_center">
@@ -299,11 +308,11 @@
       </div>
     </div>
   </section>
-
+  -->
   <!-- end shop section -->
 
   <!-- about section -->
-
+<!--
   <section class="about_section  " style="display: none;">
     <div class="container">
       <div class="row">
@@ -330,7 +339,7 @@
       </div>
     </div>
   </section>
-
+-->
   <!-- end about section -->
 
   <!-- offer section -->
@@ -339,34 +348,34 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-7 px-0">
-          <div class="box offer-box1" style="background-image: url(images/cat.jpg); background-size: cover; background-repeat: no-repeat; background-position: center">
+          <div class="box offer-box1" style="background-image: url(images/cat2.jpg); background-size: cover; background-repeat: no-repeat; background-position: center">
             <div class="detail-box">
               <h2>
                 Сервер основной
               </h2>
-              <a href="">
+              <a href="/s1">
                 Пора играть!
               </a>
             </div>
           </div>
         </div>
         <div class="col-md-5 px-0">
-          <div class="box offer-box2" style="background-image: url(images/cat2.jpg); background-size: cover; background-repeat: no-repeat; background-position: center" >
+          <div class="box offer-box2" style="background-image: url(images/cat3.jpg); background-size: cover; background-repeat: no-repeat; background-position: center" >
             <div class="detail-box">
               <h2>
                 Сервер запасной
               </h2>
-              <a href="">
+              <a href="/s2">
                 Шо?! Опять!
               </a>
             </div>
           </div>
-          <div class="box offer-box3" style="background-image: url(images/cat2.jpg); background-size: cover; background-repeat: no-repeat; background-position: center">
+          <div class="box offer-box3" style="background-image: url(images/cat.jpg); background-size: contain; background-repeat: no-repeat; background-position: center">
             <div class="detail-box">
               <h2>
                 Сервер тестовый
               </h2>
-              <a href="">
+              <a href="/s3">
                 Ох бл*ть.
               </a>
             </div>
@@ -379,7 +388,7 @@
   <!-- end offer section -->
 
   <!-- blog section -->
-
+<!--
   <section class="blog_section " style="display: none;">
     <div class="container">
       <div class="heading_container">
@@ -435,11 +444,11 @@
       </div>
     </div>
   </section>
-
+-->
   <!-- end blog section -->
 
   <!-- client section -->
-
+<!--
   <section class="client_section layout_padding" style="display: none;">
     <div class="container">
       <div class="heading_container">
@@ -535,10 +544,11 @@
       </div>
     </div>
   </section>
-
+-->
   <!-- end client section -->
 
   <!-- info section -->
+  <!--
   <section class="info_section layout_padding2" style="display: none;">
     <div class="container">
       <div class="row info_form_social_row">
@@ -642,7 +652,7 @@
       </div>
     </div>
   </section>
-
+-->
   <!-- end info_section -->
 
 
@@ -650,8 +660,8 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span>All rules playable
+        <a href="https://discord.gg/JU97Utg2vx">On discord</a>
       </p>
     </div>
   </footer>
