--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             Our DnD Games
           </span>
         </a>
-          <div class="custom_menu-btn" style="display: none;">
+          <div class="custom_menu-btn">
             <button onclick="openNav()">
               <span class="s-1"> </span>
               <span class="s-2"> </span>
@@ -45,10 +45,11 @@
             </button>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="index.html">Home</a>
-                <a href="about.html" style="display: none;">About</a>
-                <a href="shop.html" style="display: none;">Shop</a>
-                <a href="blog.html" style="display: none;">Blog</a>
+                <a href="index.html">Главная</a>
+                <a href="/s1">Основной сервер</a>
+                <a href="/s2">Вспомогательный сервер</a>
+                <a href="/s3">Тестовый сервер</a>
+                <a href="index.html">More</a>
               </div>
             </div>
           </div>
@@ -660,7 +661,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span>All rules playable
+        &copy; <span id="displayYear"></span> All rules playable
         <a href="https://discord.gg/JU97Utg2vx">On discord</a>
       </p>
     </div>
