--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
               <h2>
                 Сервер основной
               </h2>
-              <a href="/s1">
+              <a href="server1-dnd.beyondempty.space">
                 Пора играть!
               </a>
             </div>
@@ -363,7 +363,7 @@
               <h2>
                 Сервер запасной
               </h2>
-              <a href="/s2">
+              <a href="server2-dnd.beyondempty.space">
                 Шо?! Опять!
               </a>
             </div>
@@ -371,9 +371,9 @@
           <div class="box offer-box3" style="background-image: url(images/cat.jpg); background-size: contain; background-repeat: no-repeat; background-position: center">
             <div class="detail-box">
               <h2>
-                Сервер тестовый
+                Сервер v13
               </h2>
-              <a href="/s3">
+              <a href="server3-dnd.beyondempty.space">
                 Ох бл*ть.
               </a>
             </div>
