--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
               <h2>
                 Сервер основной
               </h2>
-              <a href="server1-dnd.beyondempty.space">
+              <a href="https:/server1-dnd.beyondempty.space/">
                 Пора играть!
               </a>
             </div>
@@ -363,7 +363,7 @@
               <h2>
                 Сервер запасной
               </h2>
-              <a href="server2-dnd.beyondempty.space">
+              <a href="https:/server2-dnd.beyondempty.space/">
                 Шо?! Опять!
               </a>
             </div>
@@ -373,7 +373,7 @@
               <h2>
                 Сервер v13
               </h2>
-              <a href="server3-dnd.beyondempty.space">
+              <a href="https://server3-dnd.beyondempty.space/">
                 Ох бл*ть.
               </a>
             </div>
