fix 2 redirectin url

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
               <h2>
                 Сервер основной
               </h2>
-              <a href="https:/server1-dnd.beyondempty.space/">
+              <a href="https://server1-dnd.beyondempty.space/">
                 Пора играть!
               </a>
             </div>
@@ -363,7 +363,7 @@
               <h2>
                 Сервер запасной
               </h2>
-              <a href="https:/server2-dnd.beyondempty.space/">
+              <a href="https://server2-dnd.beyondempty.space/">
                 Шо?! Опять!
               </a>
             </div>
